PROJECT(internalTools C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wpedantic -std=gnu99")

SET(SOURCES
	unpack.c
	../../src/decryption.c
	../../src/inflate.c)
ADD_EXECUTABLE(unpack ${SOURCES})

# Crypto library
#
IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  IF (FORCE_OPENSSL)
    ADD_DEFINITIONS(-D_CRYPTO_OPENSSL=1)
    FIND_PACKAGE(OpenSSL REQUIRED)
    TARGET_LINK_LIBRARIES(unpack crypto)
  ELSE (FORCE_OPENSSL)
    ADD_DEFINITIONS(-D_CRYPTO_CC=1)
  ENDIF (FORCE_OPENSSL)
ELSE (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  ADD_DEFINITIONS(-D_CRYPTO_OPENSSL=1)
  FIND_PACKAGE(OpenSSL REQUIRED)
  TARGET_LINK_LIBRARIES(unpack crypto)
ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

# Zlib
#
FIND_PACKAGE(ZLIB REQUIRED)
TARGET_LINK_LIBRARIES(unpack z)
